@@ -20,6 +20,7 @@
 package org.apache.cayenne.gen;
 
 import org.apache.cayenne.exp.Expression;
+import org.apache.cayenne.exp.ExpressionException;
 import org.apache.cayenne.exp.ExpressionParameter;
 import org.apache.cayenne.exp.parser.ASTList;
 import org.apache.cayenne.exp.parser.ASTObjPath;
@@ -28,13 +29,17 @@ import org.apache.cayenne.map.ObjAttribute;
 import org.apache.cayenne.map.ObjRelationship;
 import org.apache.cayenne.map.PathComponent;
 import org.apache.cayenne.map.ObjEntity;
+import org.apache.cayenne.query.Ordering;
 import org.apache.cayenne.query.QualifiedQuery;
 import org.apache.cayenne.query.Query;
+import org.apache.cayenne.query.SelectQuery;
+import org.apache.cayenne.util.CayenneMapEntry;
 import org.apache.cayenne.util.NameConverter;
 import org.apache.commons.collections.set.ListOrderedSet;
 
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -77,7 +82,7 @@ public class DataMapUtils {
         
         Map<String, String> queryParameters = queriesMap.get(query.getName());
 
-        if ( queryParameters == null) {
+        if (queryParameters == null) {
             queryParameters = getParameterNames(query.getQualifier(), query.getRoot());
             queriesMap.put(query.getName(), queryParameters);
         }
@@ -85,6 +90,42 @@ public class DataMapUtils {
         return parseQualifier(query.getQualifier().toString());
     }
 
+    public Boolean isValidParameterNames(QualifiedQuery query) {
+        
+        if(query.getQualifier() == null) {
+            return true;
+        }
+        
+        Map<String, String> queryParameters = queriesMap.get(query.getName());
+
+        if (queryParameters == null) {
+            try {
+                queryParameters = getParameterNames(query.getQualifier(), query.getRoot());
+            } catch (Exception e) {
+                // if we have wrong path in queryParameters return false.
+                return false;
+            }
+        }
+        
+        if(query instanceof SelectQuery) {
+            for(Ordering ordering: ((SelectQuery)query).getOrderings()) {
+                // validate paths in ordering
+                String path = ordering.getSortSpecString();
+                Iterator<CayenneMapEntry> it = ((ObjEntity)query.getRoot()).resolvePathComponents(path);
+                while (it.hasNext()) {
+                    try {
+                        it.next();
+                    } catch (ExpressionException e) {
+                        // if we have wrong path in orderings return false.
+                        return false;
+                    }
+                }
+            }
+        }
+
+        return true;
+    }
+    
     /**
      * Get list of parameter names in the same order as in qualifier.
      * 
