@@ -40,8 +40,10 @@ ${importUtils.addType('org.apache.cayenne.ObjectContext')}##
 ${importUtils.addType('org.apache.cayenne.query.NamedQuery')}##
 #foreach( $selectQuery in ${object.SelectQueries})
 ${importUtils.addType(${selectQuery.Root.ClassName})}##
+#if(${dataMapUtils.isValidParameterNames($selectQuery)})
 #foreach( $parameter in ${dataMapUtils.getParameterNames(${selectQuery})})
 ${importUtils.addType(${dataMapUtils.getParameterType(${selectQuery}, ${parameter})})}##
+#end
 #end    
 #end
 #end
@@ -62,6 +64,7 @@ public class ${superClassName} {
 #end
 #foreach( $selectQuery in ${object.SelectQueries})
 
+#if(${dataMapUtils.isValidParameterNames($selectQuery)})
     public List<${stringUtils.stripPackageName($selectQuery.Root.ClassName)}> perform${dataMapUtils.getQueryMethodName(${selectQuery})}(ObjectContext context #foreach( $parameter in ${dataMapUtils.getParameterNames(${selectQuery})}), ${stringUtils.stripPackageName(${dataMapUtils.getParameterType(${selectQuery}, ${parameter})})} ${parameter}#end) {
 #if(${dataMapUtils.hasParameters($selectQuery)})
         String[] parameters = {
@@ -79,5 +82,6 @@ public class ${superClassName} {
 #end
         return context.performQuery(new NamedQuery("${selectQuery.Name}"#if(${dataMapUtils.hasParameters($selectQuery)}), parameters, values#end));
     }
+#end
 #end
 }
